syntax="proto3";

option go_package="github.com/ntc-goer/microservice-examples/kitchen/proto;kitchenproto";

package kitchen;

service KitchenService {
  rpc VerifyOrder(VerifyOrderRequest) returns (VerifyOrderResponse);
  rpc CreatePendingTicket(CreatePendingTicketRequest) returns (CreatePendingTicketResponse);
  rpc CancelTicket(CancelTicketRequest)  returns (CancelTicketResponse);
  rpc AcceptTicket(AcceptTicketRequest)  returns (AcceptTicketResponse);
}

message DishItem {
  string dish_id = 1;
  string dish = 2;
  int32 total = 3;
}

message VerifyOrderRequest {
  string store_id = 1;
  repeated DishItem dishes = 2;
}

message VerifyOrderResponse {
  bool is_ok = 1;
}

message CreatePendingTicketRequest {
  string request_id = 1;
  string order_id = 2;
}

message CreatePendingTicketResponse {
  bool is_ok = 1;
}

message CancelTicketRequest {
  string ticket_id = 1;
}

message CancelTicketResponse {
  bool is_ok = 1;
}

message AcceptTicketRequest {
  string ticket_id = 1;
}

message AcceptTicketResponse {
  bool is_ok = 1;
}

