syntax="proto3";
import "google/api/annotations.proto";

option go_package="github.com/ntc-goer/microservice-examples/orderservice/proto;orderproto";

package order;

service OrderService {
  rpc Order(OrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/create/order",
      body: "*"
    };
  };
  rpc ApproveOrder(ApproveOrderRequest) returns (ApproveOrderResponse);
  rpc UpdateOrderStatusFailed(UpdateOrderStatusFailedRequest) returns (UpdateOrderStatusFailedResponse);
}

message OrderItem {
  string dish_id = 1;
  string dish = 2;
  int32 total = 3;
}

message OrderRequest {
  string user_id = 1;
  string location =2;
  string store_id = 3;
  repeated OrderItem orders = 4;
}

message OrderResponse {
  string request_id = 1;
  string order_id = 2;
  string status = 3;
  string trace_id = 4;
}

message ApproveOrderRequest {
  string request_id = 1;
  string order_id = 2;
}

message ApproveOrderResponse {
  bool is_ok = 1;
}

message UpdateOrderStatusFailedRequest {
  string request_id = 1;
  string order_id = 2;
}

message UpdateOrderStatusFailedResponse {
  bool is_ok = 1;
}